--- a/src/Cake.VsixSignTool.nuspec
+++ b/src/Cake.VsixSignTool.nuspec
@@ -11,19 +11,20 @@
     <licenseUrl>https://github.com/MihaMarkic/Cake.VsixSignTool/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/MihaMarkic/Cake.VsixSignTool</projectUrl>
     <releaseNotes>See https://github.com/MihaMarkic/Cake.VsixSignTool/blob/master/ReleaseNotes.md</releaseNotes>
+    <iconUrl>https://cdn.rawgit.com/cake-contrib/graphics/a5cf0f881c390650144b2243ae551d5b9f836196/png/cake-contrib-medium.png</iconUrl>
 
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <copyright>Copyright (c) Righthand 2017</copyright>
     <tags>Cake Script Build VsixSignTool</tags>
 
     <dependencies>
-      <dependency id="Cake.Core" version="0.19.0" />
+      <dependency id="Cake.Core" version="0.22.0" />
     </dependencies>
   </metadata>
 
   <files>
-    <file src="Cake.VsixSignTool\bin\Release\Cake.VsixSignTool.dll" target="lib\net45\Cake.VsixSignTool.dll" />
-    <file src="Cake.VsixSignTool\bin\Release\Cake.VsixSignTool.XML" target="lib\net45\Cake.VsixSignTool.XML" />
-    <file src="Cake.VsixSignTool\bin\Release\vsixsigntool.exe" target="lib\net45\vsixsigntool.exe" />
+    <file src="Cake.VsixSignTool\bin\Release\Cake.VsixSignTool.dll" target="lib\net46\Cake.VsixSignTool.dll" />
+    <file src="Cake.VsixSignTool\bin\Release\Cake.VsixSignTool.XML" target="lib\net46\Cake.VsixSignTool.XML" />
+    <file src="Cake.VsixSignTool\bin\Release\vsixsigntool.exe" target="lib\net46\vsixsigntool.exe" />
   </files>
 </package>
