Removes post build events

--- a/src/Cake.VsixSignTool/Cake.VsixSignTool.csproj
+++ b/src/Cake.VsixSignTool/Cake.VsixSignTool.csproj
@@ -70,7 +70,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>REM copy "$(SolutionDir)packages\Microsoft.VSSDK.VsixSignTool.15.7.27703\tools\vssdk\vsixsigntool.exe" "$(TargetDir)"</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
