--- a/src/Cake.VsixSignTool/Cake.VsixSignTool.csproj
+++ b/src/Cake.VsixSignTool/Cake.VsixSignTool.csproj
@@ -16,15 +16,15 @@
     <IncludeSymbols>true</IncludeSymbols>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <PackageReleaseNotes>See https://github.com/MihaMarkic/Cake.VsixSignTool/blob/master/ReleaseNotes.md</PackageReleaseNotes>
-    <Version>1.2.0</Version>
+    <Version>1.3.0</Version>
     <PackageIconUrl>https://cdn.rawgit.com/cake-contrib/graphics/a5cf0f881c390650144b2243ae551d5b9f836196/png/cake-contrib-medium.png</PackageIconUrl>
-    <Copyright>Copyright (c) Righthand 2018</Copyright>
+    <Copyright>Copyright (c) Righthand 2018-2019</Copyright>
   </PropertyGroup>
   <PropertyGroup>
     <DocumentationFile>bin\Debug\netstandard2.0\Cake.VsixSignTool.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Cake.Core" Version="0.28.0">
+    <PackageReference Include="Cake.Core" Version="0.33.0">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
