--- a/src/Cake.VsixSignTool/Cake.VsixSignTool.csproj
+++ b/src/Cake.VsixSignTool/Cake.VsixSignTool.csproj
@@ -1,31 +1,39 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>Cake.VsixSignTool</PackageId>
+    <Title>Cake.AppCenter</Title>
+    <PackageTags>Cake Script Build Test Deploy AppCenter Deployment cake-addin addin cake-build</PackageTags>
     <Authors>Miha Markic</Authors>
-    <Company>Righthand</Company>
-    <Description>Cake Build addin for VsixSignTool.</Description>
-    <PackageProjectUrl>https://github.com/MihaMarkic/Cake.VsixSignTool</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/MihaMarkic/Cake.VsixSignTool/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageTags>Cake Script Build VsixSignTool cake-contrib cake-build</PackageTags>
+    <Owners>Miha Markic, cake-contrib</Owners>
+    <Description>AppCenter Addin for Cake Build, Test and Deployment Automation System.</Description>
+    <RepositoryUrl>https://github.com/cake-contrib/Cake.AppCenter.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
     <IncludeSymbols>true</IncludeSymbols>
-    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
-    <PackageReleaseNotes>See https://github.com/MihaMarkic/Cake.VsixSignTool/blob/master/ReleaseNotes.md</PackageReleaseNotes>
-    <Version>1.3.0</Version>
-    <PackageIconUrl>https://cdn.rawgit.com/cake-contrib/graphics/a5cf0f881c390650144b2243ae551d5b9f836196/png/cake-contrib-medium.png</PackageIconUrl>
-    <Copyright>Copyright (c) Righthand 2018-2019</Copyright>
+    <PackageProjectUrl>https://github.com/cake-contrib/Cake.AppCenter</PackageProjectUrl>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <Version>1.4.0</Version>
   </PropertyGroup>
-  <PropertyGroup>
-    <DocumentationFile>bin\Debug\netstandard2.0\Cake.VsixSignTool.xml</DocumentationFile>
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
+    <DocumentationFile>bin\Release\net6.0\Cake.VsixSignTool.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Cake.Core" Version="0.33.0">
-      <PrivateAssets>All</PrivateAssets>
+    <PackageReference Include="Cake.Core" Version="4.0.0" PrivateAssets="All" />
+    <PackageReference Include="CakeContrib.Guidelines" Version="1.5.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
 </Project>
